--- a/app/elements/company/challenge-template/challenge-template-detail.html
+++ b/app/elements/company/challenge-template/challenge-template-detail.html
@@ -31,6 +31,10 @@
 		}
 		#tasks {
 		}
+
+		paper-material {
+			background: white;
+		}
 	</style>
 	<template>
 		<challenge-template-by-id-provider template-id="[[challengeTemplateId]]" data="{{challengeTemplate}}"></challenge-template-by-id-provider>
