--- a/app/elements/company/challenge/invited-users-table.html
+++ b/app/elements/company/challenge/invited-users-table.html
@@ -1,5 +1,5 @@
-<link rel="import" href="../../../bower_components/vaadin-grid/vaadin-grid.html">
 <link rel="import" href="../../../bower_components/iron-flex-layout/iron-flex-layout-classes.html">
+<link rel="import" href="../../../bower_components/paper-datatable/paper-datatable.html">
 
 <dom-module id="invited-users-table">
 	<style include="iron-flex">
@@ -13,56 +13,32 @@
 	</style>
 	<template>
 		<invitations-by-challenge-canonical-name-provider canonical-name="[[challenge]]" data="{{invitations}}"></invitations-by-challenge-canonical-name-provider>
-		<vaadin-grid id="invitationsGrid" class="fullHeight" items="[[challenges]]" on-selected-items-changed="_selectedItemsChanged">
-			<table>
-				<thead>
-					<tr>
-						<th>Username</th>
-						<th>Email</th>
-						<th>Token</th>
-						<th>Started</th>
-						<th>Expire</th>
-					</tr>
-				</thead>
-				<colgroup>
-					<col name="username"/>
-					<col name="token"/>
-					<col name="email"/>
-					<col name="started"/>
-					<col name="expire"/>
-				</colgroup>
-			</table>
-		</vaadin-grid>
+
+		<paper-datatable data="[[invitations]]" class="fullHeight" on-cell-tap="_onClick">
+			<paper-datatable-column header="Username" property="username"></paper-datatable-column>
+			<paper-datatable-column header="Email" property="email"></paper-datatable-column>
+			<paper-datatable-column header="Token" property="token"></paper-datatable-column>
+			<paper-datatable-column header="Started" property="started">
+				<template>
+					<span>{{_formatDate(value)}}</span>
+				</template>
+			</paper-datatable-column>
+			<paper-datatable-column header="Expire" property="expire">
+				<template>
+					<span>{{_formatDate(value)}}</span>
+				</template>
+			</paper-datatable-column>
+		</paper-datatable>
+
 	</template>
 	<script>
 		Polymer({
 			is: 'invited-users-table',
-			properties: {
-				isAdmin: {
-					value: true
-				}
+			_onClick: function(e, d){
+				page('/u/' + d.item.username);
 			},
-			observers: [
-				'_dataChanged(invitations)'
-			],
-			_selectedItemsChanged: function(){
-				var selected = this.$.invitationsGrid.selection.selected();
-				if(!this.clickedOnOption && !!selected && selected.length > 0){
-					var invitation = this.invitations[selected[0]];
-					page('/u/' + invitation.username);
-				}
-			},
-			_dataChanged: function(){
-				var element = this;
-				this.$.invitationsGrid.columns[3].renderer = element._formatDate;
-				this.$.invitationsGrid.columns[4].renderer = element._formatDate;
-				this.$.invitationsGrid.refreshItems();
-			},
-			_formatDate: function(cell){
-				if(!cell.data){
-					return '';
-				}
-				cell.element.innerHTML = util.formatDate(cell.data);
+			_formatDate: function(d){
+				return util.formatDate(d);
 			}
 		});
 	</script>
