--- a/app/elements/common/location/google-location-finder.html
+++ b/app/elements/common/location/google-location-finder.html
@@ -71,8 +71,7 @@
 					type : Object,
 					notify: true,
 					value: {
-//							uncomment this and add the api key before building and pushing to prod
-//							'apiKey': 'apiKey',
+							apiKey: 'AIzaSyCnqlcAd2M-qW20SDsghrBOOLvs144c3og',
 							version: '3.exp'
 						}
 				},
