Add Locations to Challenge creation page (#279)

--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -117,6 +117,9 @@
 <link rel="import" href="common/login/login-page-password/login-page-password.html">
 <link rel="import" href="common/login/login-page-u2f/login-page-u2f.html">
 
+<link rel="import" href="common/location/short-removable-location.html">
+<link rel="import" href="common/location/google-location-finder.html">
+
 <link rel="import" href="common/markdown/render-markdown.html">
 
 <link rel="import" href="common/register/register-page.html">
@@ -141,6 +144,7 @@
 <link rel="import" href="company/candidate/invite/invite-candidates.html">
 
 <link rel="import" href="company/challenge/challenge-create.html">
+<link rel="import" href="company/challenge/challenge-create-locations.html">
 <link rel="import" href="company/challenge/challenge-detail.html">
 <link rel="import" href="company/challenge/challenge-list.html">
 <link rel="import" href="company/challenge/invited-users-table.html">
