--- a/app/elements/coder/challenge/register-wizard/challenge-register-wizard-nav.html
+++ b/app/elements/coder/challenge/register-wizard/challenge-register-wizard-nav.html
@@ -29,6 +29,7 @@
 				<span class="flex"></span>
 				<nav-level-element state="[[firstStepState]]"></nav-level-element>
 				<nav-level-element state="[[secondStepState]]"></nav-level-element>
+				<nav-level-element state="[[thirdStepState]]"></nav-level-element>
 				<span class="flex"></span>
 			</div>
 		</paper-material>
