--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -41,6 +41,7 @@
 <link rel="import" href="coder/challenge/page/endpoints/ccc-challenge.html">
 
 <link rel="import" href="coder/challenge/register-wizard/challenge-info-step.html">
+<link rel="import" href="coder/challenge/register-wizard/challenge-location-step.html">
 <link rel="import" href="coder/challenge/register-wizard/challenge-register-step.html">
 <link rel="import" href="coder/challenge/register-wizard/challenge-register-wizard-nav.html">
 <link rel="import" href="coder/challenge/register-wizard/challenge-register-wizard.html">
