--- a/app/elements/coder/challenge/register-wizard/challenge-location-step.html
+++ b/app/elements/coder/challenge/register-wizard/challenge-location-step.html
@@ -1,7 +1,7 @@
 <link rel="import" href="../../../../bower_components/iron-flex-layout/iron-flex-layout-classes.html">
 <link rel="import" href="../../../../bower_components/paper-input/all-imports.html">
 <link rel="import" href="../../../../bower_components/iron-form/iron-form.html">
-<link rel="import" href="../../../bower_components/paper-toast/paper-toast.html">
+<link rel="import" href="../../../../bower_components/paper-toast/paper-toast.html">
 
 <dom-module id="challenge-location-step">
 	<style include="iron-flex">
