--- a/app/elements/coder/team/create-team-modal.html
+++ b/app/elements/coder/team/create-team-modal.html
@@ -13,7 +13,7 @@
 			@apply(--layout-vertical);
 		}
 		paper-input {
-			width: 250px;
+			width: 500px;
 		}
 	</style>
 	<template>
@@ -33,7 +33,7 @@
 					<paper-input autofocus="true" label="Name" value="{{team.name}}"
 						required minlength="6" maxlength="40" auto-validate error-message="Must be between 6 and 40 chars."></paper-input>
 					<paper-input label="Tag" value="{{team.canonicalName}}"
-						required minlength="6" maxlength="40" auto-validate error-message="Must be between 6 and 40 chars."></paper-input>
+						required minlength="6" maxlength="40" auto-validate error-message="Must be between 6 and 40 chars. Only lowercase letters, numbers and hyphens" pattern="^[a-z0-9]+(-[a-z0-9]+)*"></paper-input>
 						<p>The tag is a unique identifier for your team.</p>
 						<p>You will find your team at</p>
 						<p>https://app.cod.uno/t/[[team.canonicalName]]</p>
