center-align email and password on login page

--- a/app/elements/common/login/login-page-email/login-page-email.html
+++ b/app/elements/common/login/login-page-email/login-page-email.html
@@ -54,6 +54,9 @@ paper-button {
 span {
 	@apply(--layout-flex);
 }
+paper-input {
+	text-align: center;
+}
 	</style>
 	<template>
 		<base-wizard show-back-button="[[externalWidget]]" on-back="prev">
