--- a/app/elements/common/login/login-page-password/login-page-password.html
+++ b/app/elements/common/login/login-page-password/login-page-password.html
@@ -85,6 +85,9 @@ Polymer({
 		if (e.keyCode === 13) {
 			this.fire('next');
 		}
+	},
+	focus: function() {
+		this.$.passwordInput.focus();
 	}
 });
 </script>
